# luausb

./: .gitignore  .gitmodules  CMakeLists.txt  addClass.lua
src/: CMakeLists.txt  common.hpp  constants.cpp  constants.hpp  init_classes.hpp  luausb.version  main.cpp  usb.lua
src/objects/: BosDescriptor.cpp  BosDescriptor.hpp  BosDevCapabilityDescriptor.cpp  BosDevCapabilityDescriptor.hpp  ConfigDescriptor.cpp  ConfigDescriptor.hpp  ContainerIDDescriptor.cpp  ContainerIDDescriptor.hpp  Context.cpp  Context.hpp  ControlSetup.cpp  ControlSetup.hpp  Device.cpp  Device.hpp  DeviceDescriptor.cpp  DeviceDescriptor.hpp  DeviceHandle.cpp  DeviceHandle.hpp  EndpointDescriptor.cpp  EndpointDescriptor.hpp  ISOPacketDescriptor.cpp  ISOPacketDescriptor.hpp  Interface.cpp  Interface.hpp  InterfaceDescriptor.cpp  InterfaceDescriptor.hpp  SSEndpointCompanionDescriptor.cpp  SSEndpointCompanionDescriptor.hpp  SSUSBDeviceCapabilityDescriptor.cpp  SSUSBDeviceCapabilityDescriptor.hpp  Transfer.cpp  Transfer.hpp  USB20ExtensionDescriptor.cpp  USB20ExtensionDescriptor.hpp
tests/: async_transfer.lua  list.lua  sync_transfer.lua  usb.lua
